css/style.css
/*=======================================================
	
	Item	: 	N5 - Minimal Resume/CV & vCard Template
	
	Author	: 	Noman Ali Samejo
	
--------------------------------------------------------------------------------------
	List Of Contents
--------------------------------------------------------------------------------------
	
	01. General Styles
	
	02. Menu
	
	03. Section Styles
	
	04. Main Section
	
	05. About Section
	
	06. Resume Section
	
	07. Portfolio Section
	
	08. Contact Section
	
	09. Responsive CSS

=========================================================*/

/*=======================================================
	General Styles
=======================================================*/
@import url(https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700,300,100|Lora:400,400italic,700,700italic);
body, html{
	height:100%;
	width:100%;
}
body{
	position:relative;
	overflow:hidden;
	font-family: Lora, serif;
	background:#F0F0F0 !important;
}
*{
	font-family: inherit;
}
.view-project,
.portfolio-filters > li > a,
.p-table > .header > .price,
.info-list > li > strong,
.btn-custom,
.menu-items > li > a,
h1, h2, h3, h4, h5, h6{
	font-family: 'Roboto Mono', sans-serif;
}
.color{
	color:#303F9F;
}
::-webkit-scrollbar{
	background:#F0F0F0;
	height:10px;
	width:10px;
}
::-webkit-scrollbar-thumb{
	background:#D0D0D0;
	border:solid 2px #F0F0F0;
}
::-webkit-scrollbar-thumb:hover{
	background:#A0A0A0;
}
img{
	max-width:100%;
}


/*=======================================================
	Menu
=======================================================*/
body.border-dark .menu-btn > .lines > span{
	background:#303F9F;
}
.menu-btn > .lines > .l2{
	margin:6px 0;
}
.menu{
	position:absolute;
	z-index:399;
	background:rgba(0,0,0,.9);
	top:0;
	right:0;
	height:100%;
	width:0;
	-webkit-transition:width .6s cubic-bezier(.785,.135,.15,.86);
	-moz-transition:width .6s cubic-bezier(.785,.135,.15,.86);
	transition:width .6s cubic-bezier(.785,.135,.15,.86);
	overflow:hidden;
}
.menu:hover,
.menu-btn:hover + .menu{
	width:300px;
}
.menu > .inner{
	height:100%;
	width:300px;
	position:absolute;
	right:0;
	top:0;
}
.menu-items{
	margin:0;
	padding:0;
	list-style:none;
	position:absolute;
	width:100%;
	top:50%;
	left:0;
	-webkit-transform:translateY(-50%);
	-moz-transform:translateY(-50%);
	-ms-transform:translateY(-50%);
	-o-transform:translateY(-50%);
	transform:translateY(-50%);
	text-align:center;
}
.menu-items > li > a{
	color:#FFF;
	color:rgba(255,255,255,.6);
	font-size:18px;
	font-weight:700;
	text-decoration:none;
	text-transform:uppercase;
	letter-spacing:4px;
	padding:10px 0;
	margin:2px 0;
	display:block;
	-webkit-transition:color .3s cubic-bezier(.785,.135,.15,.86);
	-moz-transition:color .3s cubic-bezier(.785,.135,.15,.86);
	transition:color .3s cubic-bezier(.785,.135,.15,.86);
}
.menu-items > li > a:hover{
	color:#FFF;
}
.main-content > .page-border{
	position:absolute;
	border:solid 1px #FFF;
	border-color:rgba(255,255,255,.4);
	z-index:999;
	-webkit-transition:border-color 2.5s cubic-bezier(.785,.135,.15,.86);
	-moz-transition:border-color 2.5s cubic-bezier(.785,.135,.15,.86);
	transition:border-color 2.5s cubic-bezier(.785,.135,.15,.86);
}
body.border-dark .main-content > .page-border{
	border-color:#303F9F;
}
.main-content > .border-top,
.main-content > .border-bottom{
	height:7px;
	left:20px;
	right:20px;
}
.main-content > .border-top{
	top:14px;
}
.main-content > .border-bottom{
	bottom:14px;
}
.main-content > .border-left,
.main-content > .border-right{
	width:7px;
	top:20px;
	bottom:20px;
}
.main-content > .border-right{
	right:14px;
}
.main-content > .border-left{
	left:14px;
}


/*=======================================================
	Section Styles
=======================================================*/
.main-content{
	position:fixed;
	top:40px;
	left:40px;
	right:40px;
	bottom:40px;
	z-index:99;
	overflow:hidden;
	box-shadow: 0 0 0 10px #FFF;
}
.section{
	position:absolute;
	top:0;
	left:0;
	right:0;
	bottom:0;
	overflow:auto;
	z-index:-1;
	visibility:hidden;
	padding-top:110px;
	background:#F0F0F0;
}
.section.active{
	visibility:visible;
	z-index:99;
}
.section-header{
	position:relative;
}
.section-header > h2{
	font-size:28px;
	font-weight:200;
	margin:0;
	text-transform:uppercase;
	letter-spacing:4px;
}
.section-block{
	padding:110px;
	padding-top:0;
}
body.section-switching .main-content:before,
body.section-switching .main-content:after{
	z-index:299;
}
body.border-dark .main-content:before,
body.border-dark .main-content:after{
	border-color:#303F9F;
}
.sections{
	height:100%;
	width:100%;
}


/*=======================================================
	Main Section
=======================================================*/
.section-main{
	background-size:cover;
	background-image:url(../img/bg.jpg);
}
.section-main:before{
	content: ' ';
	position:absolute;
	top:0;
	left:0;
	height:100%;
	width:100%;
	background:#303F9F;
	opacity:.8;
	z-index:-1;
}
.intro-text{
	padding:20px;
	text-align:center;
}
.intro-text > h1{
	margin:0;
	color:#FFF;
	text-transform:uppercase;
	font-weight:900;
	letter-spacing:8px;
	font-size:78px;
}
.intro-text > p{
	font-size:18px;
	color:#FFF;
	color:rgba(255,255,255,.8);
	margin-top:15px;
	margin-bottom:0;
	font-weight:300;
	font-style:italic;
	letter-spacing:2px;
}
.intro-text > .intro-btns{
	margin-top:45px;
}
.intro-text > .intro-btns > .btn-custom{
	margin:0 15px;
}
a.btn-custom{
	color:#FFF;
	text-decoration:none;
}
.btn-custom{
	color:#FFF;
	letter-spacing:4px;
	text-transform:uppercase;
	text-decoration:none;
	text-align:center;
	font-size:11px;
	font-weight:400;
	display:inline-block;
	*display:inline;
	*zoom:1;
	line-height:1em;
	padding:17px 32px;
	position:relative;
	z-index:5;
	background:transparent;
	border:none;
}
/* ... */

